# taichi-matrix

./: AXIOMS.md  README.md  RESEARCH_PLAN.md  WHITEPAPER.md  pyproject.toml
examples/: e2e_pipeline.py
taichi_matrix/: __init__.py  constants.py  pipeline.py
taichi_matrix/torch_adapter/: __init__.py  correct_module.py  hex_attention_module.py  mtp_module.py  pipeline.py  quant_module.py  router_module.py
tests/: test_pipeline.py
